@@ -27,6 +27,7 @@ DEFINE_BIT_ENUM(ETypeFlags,
     ((TwoPhaseCreation)       (0x0080)) // employ two-phase creation protocol: CreationStarted -> CreationPreCommitted -> CreationCommitted
     ((Removable)              (0x0100)) // objects of this (unversioned) type can be removed by explicit Remove call
     ((TwoPhaseRemoval)        (0x0200)) // employ two-phase removal protocol: RemovalStarted -> RemovalPreCommitted -> RemovalComitted
+    ((ForbidAnnotationRemoval)(0x0400)) // annotation cannot be removed from portal entrances and exits
 );
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -53,6 +54,8 @@ class TMasterObject;
 
 DECLARE_REFCOUNTED_STRUCT(IObjectProxy)
 DECLARE_REFCOUNTED_STRUCT(IObjectTypeHandler)
+
+const int MaxAnnotationLength = 1024;
 
 ////////////////////////////////////////////////////////////////////////////////
 
