@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* avmatrosov: Added annotations. Update masters via snapshot.
 * aozeritsky: RequestRateLimitOptions was added. Update masters via snapshot.
 * babenko: Transaction mirroring. Update via snapshot.
 * ermolovd: Update type validation. Update via snapshot.
